Bug 880447 - Permit 'yield yield expr;'. r=till.